file name reverted

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -12,7 +12,7 @@ authors:
     url: "https://github.com/usman-jamil"
     affiliations:
       name: Allied Consultants
-  - name:  Sheikh Luqman
+  - name:  SheikhLuqman
     url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
     affiliations:
       name: Allied Consultants
@@ -21,7 +21,7 @@ authors:
     affiliations:
       name: Allied Consultants
 
-bibliography: krazzy-adventures.bib
+bibliography: 2018-12-22.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
@@ -69,10 +69,6 @@ toc:
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
 _styles: >
-  .toc {
-    position: -webkit-sticky;
-    position: sticky;
-  }
   .fake-img {
     background: #bbb;
     border: 1px solid rgba(0, 0, 0, 0.1);
