--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -21,7 +21,7 @@ authors:
     affiliations:
       name: Allied Consultants
 
-bibliography: 2018-12-22.bib
+bibliography: 2018-12-22-krazzy.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
