removing sample projects

--- a/_posts/2023-12-06-krazzy.md
+++ b/_posts/2023-12-06-krazzy.md
@@ -5,7 +5,7 @@ description: A booking website where users can book to participate in different 
 tags: Krazzy booking
 giscus_comments: true
 date: 2023-12-06
-featured: true
+featured: false
 
 authors:
   - name: Usman Jamil Bhatti
