--- a/_posts/2024-03-31-scp-tool.md
+++ b/_posts/2024-03-31-scp-tool.md
@@ -12,7 +12,14 @@ authors:
     url: "https://github.com/usman-jamil"
     affiliations:
       name: Allied Consultants
-
+  - name:  Sheikh Luqman
+    url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
+    affiliations:
+      name: Allied Consultants
+  - name: Zuhaib Sohail
+    url: "https://github.com/ZuhaibSohail163"
+    affiliations:
+      name: Allied Consultants
 ---
 
 Please review the post `Configuring ssh on linux` in order to be able to follow along. This way you will have access to an ssh server.
