fix author issues

--- a/_posts/2024-03-31-scp-tool.md
+++ b/_posts/2024-03-31-scp-tool.md
@@ -13,13 +13,14 @@ authors:
     affiliations:
       name: Allied Consultants
   - name:  Sheikh Luqman
-    url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
+    url: "https://github.com/luqmant51"
     affiliations:
       name: Allied Consultants
   - name: Zuhaib Sohail
     url: "https://github.com/ZuhaibSohail163"
     affiliations:
       name: Allied Consultants
+
 ---
 
 Please review the post `Configuring ssh on linux` in order to be able to follow along. This way you will have access to an ssh server.
